deployment/K8S/kustomize/monitoring-k8s/jhipster-grafana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jhipster-grafana
  namespace: teamdojo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jhipster-grafana
  template:
    metadata:
      labels:
        app: jhipster-grafana
    spec:
      containers:
        - name: jhipster-grafana
          image: grafana/grafana:7.5.2
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources:
            requests:
              memory: '100Mi'
              cpu: '100m'
            limits:
              memory: '250Mi'
              cpu: '200m'
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/grafana-storage
      volumes:
        - name: grafana-storage
          emptyDir: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: jhipster-grafana
  namespace: teamdojo
  labels:
    app: jhipster-grafana
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
  selector:
    app: jhipster-grafana
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jhipster-grafana
  namespace: teamdojo
spec:
  rules:
    - host: jhipster-grafana.teamdojo.teamdojo.security.iteratec.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: jhipster-grafana
              servicePort: 3000
